--- a/index.html
+++ b/index.html
@@ -1,174 +1,416 @@
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>White Celebration — Under Construction</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <title>White Celebration — Under Construction</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <style>
-        /* Reset */
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Inter, sans-serif;
-        }
+  <style>
+    :root{
+      --bg0:#07070b;
+      --bg1:#0e0f18;
+      --card:rgba(255,255,255,.06);
+      --stroke:rgba(255,255,255,.10);
+      --text:#eef0ff;
+      --muted:rgba(238,240,255,.70);
+      --muted2:rgba(238,240,255,.55);
+      --accent:#7aa2ff;
+      --accent2:#9f7aff;
+      --shadow:0 24px 60px rgba(0,0,0,.55);
+      --radius:18px;
+      --radius-sm:12px;
+      --focus:0 0 0 3px rgba(122,162,255,.25);
+    }
 
-        body {
-            min-height: 100vh;
-            background: radial-gradient(circle at top, #1e1e2f, #0e0e14);
-            color: #eaeaf0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-between;
-            text-align: center;
-        }
+    * { box-sizing: border-box; }
+    html, body { height: 100%; }
+    body{
+      margin:0;
+      font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Inter,system-ui,sans-serif;
+      color:var(--text);
+      background:
+        radial-gradient(900px 500px at 15% 0%, rgba(122,162,255,.18), transparent 65%),
+        radial-gradient(800px 500px at 90% 20%, rgba(159,122,255,.14), transparent 60%),
+        radial-gradient(600px 600px at 50% 100%, rgba(255,255,255,.06), transparent 60%),
+        linear-gradient(180deg, var(--bg1), var(--bg0));
+      display:grid;
+      place-items:center;
+      padding:24px;
+    }
 
-        header {
-            margin-top: 64px;
-            font-size: 2.2rem;
-            font-weight: 600;
-            letter-spacing: 0.08em;
-        }
+    /* subtle background grain */
+    body::before{
+      content:"";
+      position:fixed;
+      inset:0;
+      pointer-events:none;
+      background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='120' height='120'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.9' numOctaves='2' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='120' height='120' filter='url(%23n)' opacity='.12'/%3E%3C/svg%3E");
+      opacity:.12;
+      mix-blend-mode:overlay;
+    }
 
-        main {
-            max-width: 520px;
-            width: 100%;
-            padding: 32px 24px;
-        }
+    .wrap{
+      width:min(920px, 100%);
+      display:grid;
+      grid-template-columns: 1.2fr .8fr;
+      gap:18px;
+      align-items:stretch;
+    }
 
-        .card {
-            background: rgba(255, 255, 255, 0.04);
-            border: 1px solid rgba(255, 255, 255, 0.08);
-            border-radius: 16px;
-            padding: 32px 24px;
-            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.45);
-            backdrop-filter: blur(8px);
-        }
+    @media (max-width: 860px){
+      .wrap{ grid-template-columns: 1fr; }
+    }
 
-        .status {
-            font-size: 1.2rem;
-            margin-bottom: 24px;
-            opacity: 0.9;
-        }
+    .panel{
+      background:var(--card);
+      border:1px solid var(--stroke);
+      border-radius:var(--radius);
+      box-shadow:var(--shadow);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+      overflow:hidden;
+      position:relative;
+    }
 
-        form {
-            display: flex;
-            flex-direction: column;
-            gap: 12px;
-        }
+    .panel::after{
+      content:"";
+      position:absolute;
+      inset:-2px;
+      background:linear-gradient(135deg, rgba(122,162,255,.20), rgba(159,122,255,.10), transparent 60%);
+      opacity:.30;
+      pointer-events:none;
+    }
 
-        input[type="email"] {
-            padding: 14px 16px;
-            border-radius: 10px;
-            border: 1px solid rgba(255, 255, 255, 0.15);
-            background: rgba(0, 0, 0, 0.35);
-            color: #ffffff;
-            font-size: 0.95rem;
-            outline: none;
-        }
+    .hero{
+      padding:28px 28px 24px;
+    }
 
-        input[type="email"]::placeholder {
-            color: rgba(255, 255, 255, 0.5);
-        }
+    .brand{
+      display:flex;
+      align-items:center;
+      gap:12px;
+      position:relative;
+      z-index:1;
+    }
 
-        input[type="email"]:focus {
-            border-color: #7aa2ff;
-            box-shadow: 0 0 0 2px rgba(122, 162, 255, 0.25);
-        }
+    .logo{
+      width:44px;
+      height:44px;
+      border-radius:14px;
+      border:1px solid rgba(255,255,255,.14);
+      background:
+        radial-gradient(circle at 30% 25%, rgba(255,255,255,.18), transparent 45%),
+        linear-gradient(135deg, rgba(122,162,255,.35), rgba(159,122,255,.25));
+      box-shadow: 0 14px 30px rgba(0,0,0,.35);
+    }
 
-        button {
-            margin-top: 8px;
-            padding: 14px;
-            border-radius: 10px;
-            border: none;
-            font-size: 0.95rem;
-            font-weight: 500;
-            cursor: pointer;
-            color: #0e0e14;
-            background: linear-gradient(135deg, #7aa2ff, #9f7aff);
-            transition: transform 0.15s ease, box-shadow 0.15s ease;
-        }
+    h1{
+      margin:0;
+      font-size:1.35rem;
+      letter-spacing:.08em;
+      text-transform:uppercase;
+      font-weight:650;
+    }
 
-        button:hover {
-            transform: translateY(-1px);
-            box-shadow: 0 10px 20px rgba(122, 162, 255, 0.35);
-        }
+    .badge{
+      margin-top:14px;
+      display:inline-flex;
+      align-items:center;
+      gap:10px;
+      padding:10px 12px;
+      border-radius:999px;
+      border:1px solid rgba(255,255,255,.12);
+      background:rgba(0,0,0,.20);
+      color:var(--muted);
+      font-size:.9rem;
+      position:relative;
+      z-index:1;
+    }
 
-        .direct-email {
-            margin-top: 16px;
-            font-size: 0.85rem;
-            opacity: 0.7;
-        }
+    .dot{
+      width:10px;
+      height:10px;
+      border-radius:50%;
+      background:linear-gradient(135deg, var(--accent), var(--accent2));
+      box-shadow: 0 0 0 6px rgba(122,162,255,.10);
+    }
 
-        .direct-email a {
-            color: #9f7aff;
-            text-decoration: none;
-        }
+    .headline{
+      margin:16px 0 8px;
+      font-size:2.0rem;
+      line-height:1.12;
+      font-weight:720;
+      letter-spacing:-.02em;
+      position:relative;
+      z-index:1;
+    }
 
-        .direct-email a:hover {
-            text-decoration: underline;
-        }
+    .sub{
+      margin:0;
+      color:var(--muted2);
+      max-width:58ch;
+      line-height:1.55;
+      position:relative;
+      z-index:1;
+    }
 
-        footer {
-            margin-bottom: 24px;
-            font-size: 0.75rem;
-            opacity: 0.5;
-        }
-    </style>
+    .meta{
+      display:flex;
+      gap:10px;
+      flex-wrap:wrap;
+      margin-top:18px;
+      position:relative;
+      z-index:1;
+    }
+
+    .pill{
+      font-size:.85rem;
+      color:var(--muted);
+      padding:10px 12px;
+      border-radius:999px;
+      background:rgba(0,0,0,.22);
+      border:1px solid rgba(255,255,255,.10);
+    }
+
+    .side{
+      padding:24px;
+      display:flex;
+      flex-direction:column;
+      justify-content:space-between;
+      gap:14px;
+    }
+
+    .cardTitle{
+      margin:0 0 10px;
+      font-size:1.05rem;
+      font-weight:650;
+      position:relative;
+      z-index:1;
+    }
+
+    .hint{
+      margin:0 0 14px;
+      color:var(--muted2);
+      line-height:1.5;
+      font-size:.95rem;
+      position:relative;
+      z-index:1;
+    }
+
+    form{
+      display:flex;
+      flex-direction:column;
+      gap:10px;
+      position:relative;
+      z-index:1;
+    }
+
+    label{
+      font-size:.85rem;
+      color:var(--muted);
+    }
+
+    .field{
+      display:flex;
+      gap:10px;
+      align-items:center;
+      background:rgba(0,0,0,.26);
+      border:1px solid rgba(255,255,255,.12);
+      border-radius:var(--radius-sm);
+      padding:10px 12px;
+    }
+
+    .field:focus-within{
+      border-color:rgba(122,162,255,.55);
+      box-shadow:var(--focus);
+    }
+
+    input[type="email"]{
+      width:100%;
+      border:none;
+      outline:none;
+      background:transparent;
+      color:var(--text);
+      font-size:0.98rem;
+      padding:6px 2px;
+    }
+
+    input[type="email"]::placeholder{
+      color:rgba(238,240,255,.45);
+    }
+
+    .actions{
+      display:flex;
+      gap:10px;
+      flex-wrap:wrap;
+    }
+
+    button{
+      flex:1 1 160px;
+      border:none;
+      cursor:pointer;
+      border-radius:var(--radius-sm);
+      padding:12px 14px;
+      font-weight:650;
+      font-size:.95rem;
+      color:#0b0c12;
+      background:linear-gradient(135deg, var(--accent), var(--accent2));
+      box-shadow: 0 14px 24px rgba(122,162,255,.18);
+      transition: transform .14s ease, box-shadow .14s ease, filter .14s ease;
+    }
+
+    button:hover{
+      transform: translateY(-1px);
+      box-shadow: 0 18px 30px rgba(122,162,255,.26);
+      filter: brightness(1.02);
+    }
+
+    .secondary{
+      flex:1 1 160px;
+      background:rgba(0,0,0,.22);
+      color:var(--text);
+      border:1px solid rgba(255,255,255,.12);
+      box-shadow:none;
+    }
+
+    .secondary:hover{
+      box-shadow: 0 12px 22px rgba(0,0,0,.35);
+      filter:none;
+    }
+
+    .direct{
+      margin-top:10px;
+      padding-top:12px;
+      border-top:1px solid rgba(255,255,255,.10);
+      color:var(--muted2);
+      font-size:.9rem;
+      line-height:1.45;
+      position:relative;
+      z-index:1;
+    }
+
+    .direct a{
+      color:var(--text);
+      text-decoration:none;
+      border-bottom:1px dashed rgba(238,240,255,.35);
+    }
+    .direct a:hover{
+      border-bottom-color: rgba(238,240,255,.70);
+    }
+
+    footer{
+      width:min(920px, 100%);
+      margin-top:14px;
+      display:flex;
+      justify-content:space-between;
+      gap:12px;
+      color:rgba(238,240,255,.45);
+      font-size:.8rem;
+    }
+
+    @media (max-width: 520px){
+      .headline{ font-size:1.65rem; }
+      footer{ flex-direction:column; }
+    }
+
+    /* reduced motion */
+    @media (prefers-reduced-motion: reduce){
+      *{ scroll-behavior:auto !important; transition:none !important; }
+    }
+  </style>
 </head>
+
 <body>
+  <div class="wrap">
+    <!-- Left / hero -->
+    <section class="panel hero" aria-label="White Celebration status">
+      <div class="brand">
+        <div class="logo" aria-hidden="true"></div>
+        <h1>White Celebration</h1>
+      </div>
 
-<header>
-    White Celebration
-</header>
+      <div class="badge" role="status" aria-live="polite">
+        <span class="dot" aria-hidden="true"></span>
+        Site in progress — under construction
+      </div>
 
-<main>
-    <div class="card">
-        <div class="status">
-            Under construction
-        </div>
+      <h2 class="headline">We’re building something clean, fast, and intentional.</h2>
+      <p class="sub">
+        The website is currently being prepared. If you need information, inquiries can be sent through the
+        contact box, or directly via email.
+      </p>
 
-        <!--
-          Uses mailto: so it works without a backend.
-          Opens the user's email client with the message pre-filled.
-        -->
-        <form
-            action="mailto:shiki@whitecelebration.site"
-            method="post"
-            enctype="text/plain"
-        >
+      <div class="meta" aria-label="Quick notes">
+        <div class="pill">Dark theme by default</div>
+        <div class="pill">Mobile-first layout</div>
+        <div class="pill">No backend required</div>
+      </div>
+    </section>
+
+    <!-- Right / contact -->
+    <aside class="panel side" aria-label="Contact">
+      <div>
+        <p class="cardTitle">Contact</p>
+        <p class="hint">
+          Enter your email, then we’ll open your email client with a pre-filled message.
+          (This uses <code>mailto:</code> — no data is stored on the site.)
+        </p>
+
+        <form action="mailto:shiki@whitecelebration.site" method="post" enctype="text/plain">
+          <label for="fromEmail">Your email address</label>
+
+          <div class="field">
             <input
-                type="email"
-                name="From"
-                placeholder="Your email address"
-                required
+              id="fromEmail"
+              type="email"
+              name="From"
+              placeholder="name@example.com"
+              autocomplete="email"
+              inputmode="email"
+              required
             />
+          </div>
 
-            <input
-                type="hidden"
-                name="Subject"
-                value="Inquiry from White Celebration landing page"
-            />
+          <input
+            type="hidden"
+            name="Subject"
+            value="Inquiry from White Celebration landing page"
+          />
 
-            <button type="submit">
-                Contact Us
+          <!-- Optional: pre-fill body template -->
+          <input
+            type="hidden"
+            name="Body"
+            value="Hello White Celebration,%0D%0A%0D%0AI'm reaching out regarding:%0D%0A%0D%0A—%0D%0A%0D%0AThanks,"
+          />
+
+          <div class="actions">
+            <button type="submit">Open Email Draft</button>
+            <button
+              type="button"
+              class="secondary"
+              onclick="navigator.clipboard?.writeText('shiki@whitecelebration.site')"
+              aria-label="Copy email address"
+              title="Copy email address"
+            >
+              Copy Email
             </button>
+          </div>
         </form>
 
-        <div class="direct-email">
-            Or email us directly at
-            <a href="mailto:shiki@whitecelebration.site">
-                shiki@whitecelebration.site
-            </a>
+        <div class="direct">
+          Prefer direct email:
+          <a href="mailto:shiki@whitecelebration.site">shiki@whitecelebration.site</a>
         </div>
-    </div>
-</main>
+      </div>
+    </aside>
+  </div>
 
-<footer>
-    © 2026 White Celebration. All rights reserved.
-</footer>
-
+  <footer>
+    <div>© 2026 White Celebration. All rights reserved.</div>
+    <div>Philippines • Manila</div>
+  </footer>
 </body>
 </html>
+```
