--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -335,10 +334,9 @@
         Site in progress — under construction
       </div>
 
-      <h2 class="headline">We’re building something clean, fast, and intentional.</h2>
+      <h2 class="headline">Multimedia Production Studios</h2>
       <p class="sub">
-        The website is currently being prepared. If you need information, inquiries can be sent through the
-        contact box, or directly via email.
+        This website is currently under construction. Please wait until White Celebration is ready.
       </p>
 
       <div class="meta" aria-label="Quick notes">
@@ -353,8 +351,7 @@
       <div>
         <p class="cardTitle">Contact</p>
         <p class="hint">
-          Enter your email, then we’ll open your email client with a pre-filled message.
-          (This uses <code>mailto:</code> — no data is stored on the site.)
+          Enter your email for be contacted. No information will be saved into our servers.
         </p>
 
         <form action="mailto:shiki@whitecelebration.site" method="post" enctype="text/plain">
@@ -413,4 +410,3 @@
   </footer>
 </body>
 </html>
-```
